# fanqie-short-story

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
config/: defaults.yaml
scripts/: regen_covers.py  regen_two.py
src/fanqie_short_story/: __init__.py  body.py  cli.py  config.py  cover.py  critique.py  daemon.py  daily.py  llm.py  llm_critique.py  manifest.py  outline.py  pipeline.py  polish.py  prompts.py  synopsis.py  title.py
tests/: conftest.py  test_body.py  test_body_v040.py  test_cli.py  test_cli_v030.py  test_config.py  test_cover.py  test_critique.py  test_critique_v040.py  test_critique_v041.py  test_daemon.py  test_daily.py  test_editor_critic.py  test_llm.py  test_llm_critique.py  test_manifest.py  test_outline.py  test_outline_v040.py  test_pipeline.py  test_pipeline_v040.py  test_polish.py  test_synopsis.py  test_title.py
tests/e2e/: test_daily_run_once.py  test_real_generate.py  test_tomato_methodology.py
