[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fanqie-short-story"
version = "0.3.0"
description = "Generate 番茄短故事 (1-2万字) from a hook + genre"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "filelock>=3.12,<4.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
]

[project.scripts]
fanqie-story = "fanqie_short_story.cli:main"
fanqie-story-run = "fanqie_short_story.daemon:run_with_notification"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that hit real LLM API",
]
